# rust-practice

./: .gitignore
collections_exercices/src/: main.rs
collections_hashmap/src/: main.rs
collections_string/src/: main.rs
collections_vector/src/: main.rs
data_types/src/: main.rs
diesel_demo/: .env
enums/src/: main.rs
error_handle/src/: main.rs
functions/src/: main.rs
generic_type/src/: main.rs
guess_game/src/: main.rs
method/src/: main.rs
modules_packages/: Cargo.toml
modules_packages/src/: main.rs
modules_packages/src/example/: first.rs  second.rs
ownership/src/: main.rs
rust_actix_diesel/: .env  Cargo.toml
rust_actix_diesel/src/: README.md  actors.rs  db_models.rs  db_utils.rs  insertables.rs  main.rs  messages.rs  schema.rs  services.rs
rust_backend_actix/: Cargo.toml
rust_backend_actix/src/: main.rs
simple_todo_list/: Cargo.toml
simple_todo_list/src/: main.rs
simple_todo_list/src/todolist/: models.rs  services.rs
simple_todo_list/src/todolist/models/: create_entry_data.rs  update_entry_data.rs
structs/: Cargo.toml
structs/src/: main.rs
variable/src/: main.rs
