[package]
name = "rust_actix_diesel"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
chrono = {version = "0.4.26",  features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = "1.0.183"
serde_derive = "1.0.183"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
